--- a/archieve.html
+++ b/archieve.html
@@ -18,8 +18,8 @@
       <img class="hero-title" src="./assets/images/my-title.jpg">
     </div>
     <div class="hero-text">
-      <div class="archieve">
-        <a href="index.html">
+      <div >
+        <a class="archieve" href="index.html">
           STUDY THE TIMES<br>Home Page
         </a>
       </div>
