--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <img class="hero-title" src="./assets/images/my-title.jpg">
     </div>
     <div class="hero-text">
-      <div class="archieve">
-        <a href="archieve.html">
+      <div>
+        <a class="archieve" href="archieve.html">
           STUDY THE TIMES
           <br>
           Previous Editions Archive
