--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     </div>
     <div class="hero-text">
       <div>
-        <a class="archieve" href="archieve.html">
+        <a class="archieve" href="archieve.html"
+        style="
+        text-decoration: none;
+        color: white;
+        font-family: Garamond;
+        font-size: 1.2rem;
+        padding: 1 10px;
+        text-align: center;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.375);
+        ">
           STUDY THE TIMES
           <br>
           Previous Editions Archive
