--- a/archieve.html
+++ b/archieve.html
@@ -19,7 +19,17 @@
     </div>
     <div class="hero-text">
       <div >
-        <a class="archieve" href="index.html">
+        <a class="archieve" href="index.html"
+        style="
+        text-decoration: none;
+        color: white;
+        font-family: Garamond;
+        font-size: 1.2rem;
+        padding: 1 10px;
+        text-align: center;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.375);
+        "
+        >
           STUDY THE TIMES<br>Home Page
         </a>
       </div>
