--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
     
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;Washington, D.C. – President Joseph Biden finally succumbed to intense pressure from within the Democratic Party today and withdrew from the 2024 presidential race.  The pressure to withdraw from the race stemmed from Biden’s demonstrative cognitive decline, but Democratic officials stopped short of asking him to resign from office.  </p>
     <br>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;Biden’s move casts a sudden spotlight on Robert F. Kennedy Jr.’s candidacy for the presidency.  The Democratic National Convention is still a long-month away.  And at least until the convention closes on August 22 in Chicago, the race for the presidency is now a close two-man contest between former President Donald Trump, the Republican nominee, and Mr. Kennedy –an independent candidate for the presidency.  Mr. Kennedy is the son of Attorney General and Senator Robert F. Kennedy and the nephew of President John F. Kennedy.  </p>
+    <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;President Kennedy was assassinated on November 22, 1963, and Mr. Kennedy’s father was assassinated on June 5, 1968 in Los Angeles while he was celebrating a victory in the 1968 California Democratic Presidential Primary four months before the Democratic National Convention that year.</p>
     <br>
     <br>
