--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
   </div>
 
-  <div class="my-headline">
+  <div class="my-headline" style="padding-bottom:1%">
     <p>BIDEN QUITS THE RACE FOR THE 2024 PRESIDENCY<br>
     But Clings to the White House</p>
   </div>
@@ -94,7 +94,7 @@
   <br><br>
   <div class="report">
     
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;Washington, D.C. – President Joseph Biden finally succumbed to intense pressure from within the Democratic Party today and withdrew from the 2024 presidential race.  The pressure to withdraw from the race stemmed from Biden’s demonstrative cognitive decline, but Democratic officials stopped short of asking him to resign from office.  </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 900;font-style: normal;">WASHINGTON, D.C.</span> – President Joseph Biden finally succumbed to intense pressure from within the Democratic Party today and withdrew from the 2024 presidential race.  The pressure to withdraw from the race stemmed from Biden’s demonstrative cognitive decline, but Democratic officials stopped short of asking him to resign from office.  </p>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;Biden’s move casts a sudden spotlight on Robert F. Kennedy Jr.’s candidacy for the presidency.  The Democratic National Convention is still a long-month away.  And at least until the convention closes on August 22 in Chicago, the race for the presidency is now a close two-man contest between former President Donald Trump, the Republican nominee, and Mr. Kennedy –an independent candidate for the presidency.  Mr. Kennedy is the son of Attorney General and Senator Robert F. Kennedy and the nephew of President John F. Kennedy.  </p>
     <br>
@@ -131,7 +131,7 @@
     <img class='pic' src="./assets/images/pic2_0721.jpg" style="width: 90%;"/>
     <br>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;To be sure, Mr. Hannity’s query implicitly revealed his understanding that a history of the Kennedy family is nearly tantamount to a history of the Democratic Party at least after WWII.   And Hannity seemed bewildered that the contemporary DNC, instead of embracing a fair contest between Kennedy and Biden in a united effort to oppose the Republican nominee with its strongest candidate in the general election, it drove Kennedy from his father’s party, and the party of one of its most celebrated presidents, John F. Kennedy.    </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;To be sure, Mr. Hannity’s query implicitly revealed <span>his</span> understanding that a history of the Kennedy family is nearly tantamount to a history of the Democratic Party at least after WWII.   And Hannity seemed bewildered that the contemporary DNC, instead of embracing a fair contest between Kennedy and Biden in a united effort to oppose the Republican nominee with its strongest candidate in the general election, it drove Kennedy from his father’s party, and the party of one of its most celebrated presidents, John F. Kennedy.    </p>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;As the <span>Times</span> gathers data for analysis of the 2024 Presidential Campaign after Biden’s withdrawal from the race, it will also endeavor to evaluate at the same time one answer, which some observers offer to Mr. Hannity’s question:  the Neo-Democratic party is simply no longer the same party that its most illustrious leaders and statesmen built; it has fallen into the hands of dark money and operatives (some invisible) with insidious agendas.       </p>
     <br>
