--- a/archieve.html
+++ b/archieve.html
@@ -131,6 +131,8 @@
     <br>
     <p class="reportClosing">Such are the <span>The Real Times</span> on July 14, 2024 </p>
     <br><br>
+    <p class="footer"><span>The Real Times</span> is a newspaper in development aimed at invigorating the First Amendment to the United States Constitution and restoring integrity to American journalism.  <br> If you would like to receive <span>The Real Times</span> in development and watch us grow, please send an e-mail message to <a href="mailto:editor@therealtimes.org">editor@therealtimes.org</a> with “Save the Union” in the subject line. </p>
+  </div>
   </div>
   
 </body>
