--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
     <p class="reportClosing">Such are the <span>The Real Times</span> on July 21, 2024 </p>
     <br><br>
-    <p class="footer">&nbsp;&nbsp;&nbsp;&nbsp;<span>The Real Times</span> is a newspaper in development aimed at invigorating the First Amendment to the United States Constitution and restoring integrity to American journalism.  If you would like to receive <span>The Real Times</span> in development and watch us grow, please send an e-mail message to <a href="mailto:editor@therealtimes.org">editor@therealtimes.org</a> with “Save the Union” in the subject line. </p>
+    <p class="footer">&nbsp;&nbsp;&nbsp;&nbsp;<span>The Real Times</span> is a newspaper in development aimed at invigorating the First Amendment to the United States Constitution and restoring integrity to American journalism.  If you would like to receive <span>The Real Times</span> in development and watch us grow, please send a message to <a href="mailto:editor@therealtimes.org">editor@therealtimes.org</a> with “Subscribe” in the subject line. </p>
   </div>
   <script src="./index.js"></script>
 
