update content in head

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Real Times</title>
-  <meta name="description" content="The Real Times is a newspaper site that strives for integrity." />
+  <meta name="description" content="The Real Times is a newspaper in development aimed at invigorating the First Amendment to the United States Constitution and restoring integrity to American journalism.  The Nation.  The World. Literature. Painting & Sculpture. Religion. Philosophy & Science. Sports. To receive The Real Times in development and watch us grow, send a message to editor@therealtimes.org with “Subscribe” in the subject line.  Journalism with Principles, Statesmen with Courage --an Alliance for Liberty." />
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
