change pictures to black and white

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <div>
     <section class="my-images">
-      <img class="main-image" src="./assets/images/main0721.png" />
+      <img class="main-image" src="./assets/images/main0721-bw.png" />
     </section>
   </div>
   <div>
@@ -126,7 +126,7 @@
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;As the <span>Times</span> gathers data for analysis of the 2024 Presidential Campaign after Biden’s withdrawal from the race, it will also endeavor to evaluate at the same time one answer, which some observers offer to Mr. Hannity’s question:  the Neo-Democratic party is simply no longer the same party that its most illustrious leaders and statesmen built; it has fallen into the hands of dark money and operatives (some invisible) with insidious agendas.       </p>
     <br>
-    <img class='pic' src="./assets/images/pic3_0721.jpg" />
+    <img class='pic' src="./assets/images/pic3_0721_bw.jpg" />
     <br>
     <br>
     
