--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     </section>
   </div>
 
-  <div class="my-headline" style="padding: 2%; line-height:1">
-    <p> KENNEDY:<br><br>
+  <div class="my-headline" style="padding: 2%; line-height:1.2">
+    <p> KENNEDY:<br>
     DEMOCRATIC PARTY NOW GREATEST THREAT TO DEMOCRACY IN USA</p>
   </div>
 
   <div>
     <section class="my-images" style="width: 100%; justify-content: center; background-color: white; margin-top: 2%;">
-      <img class="main-image" style="width: 80%; justify-content: center; background-color: white;" src="./assets/images/main0822.png" />
+      <img class="main-image" style="width: 70%; justify-content: center; background-color: white;" src="./assets/images/main0822.png" />
     </section>
   </div>
   <div>
@@ -89,7 +89,7 @@
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 900;font-style: normal;">LOS ANGELES -- </span> – Robert F. Kennedy Jr. warned the nation last week that “the Democratic Party has become the biggest threat to democracy in this country.”  Mr. Kennedy is the son of Senator and Attorney General Robert F. Kennedy and the nephew of President John F. Kennedy –two of the former Democratic Party’s most celebrated leaders.  Purged by <span>Neo</span>-Democrats from the party that his father lost his life building, Robert F. Kennedy Jr. is now an independent candidate for president.  But there is wide speculation that he will soon suspend his independent campaign and align with the forces of Elon Musk and President Trump in a more united effort to stop the rise of the <span>Neo-Democratic Party</span> in America.     </p>
     <br>
     <br>
-    <img class='pic' src="./assets/images/pic2_0822.jpg" />
+    <img class='pic' style="width: 90%;" src="./assets/images/pic2_0822.jpg" />
     <br>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;Elon Musk interjected Kennedy live into the Trump-Biden debate on the X Platform after CNN blocked Kennedy’s participation in the actual June 27, 2024 Atlanta debate.  Musk’s move is evidence that he shares President John F. Kennedy’s legendary personal commitment to political debate as the cornerstone of American democracy and that he intends to utilize the X Platform to fight censorship during the 2024 presidential campaign.  The attempted assassination of President Trump on July 13, 2024 triggered Musk’s endorsement of Trump for president.  But Musk (historically a liberal who voted Democrat) also shares Robert F. Kennedy Jr.’s concerns with the rise of authoritarianism and the Neo-Democratic Party in America –and he enjoys good relationships with President Trump and Mr. Kennedy.  Musk announced on May 18, 2022 that he could “no longer support the Democratic Party.” He wrote that "in the past I voted Democrat because they were mostly the kindness party.  But they have become the party of division and hate, so I can no longer support them and will vote Republican.”  Kennedy for his part has announced that he will address the nation’s “present historical moment” on Friday, August 23.</p>
