--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <div>
     <section class="my-images" style="width: 100%; justify-content: center; background-color: white; margin-top: 2%;">
-      <img class="main-image" style="width: 70%; justify-content: center; background-color: white;" src="./assets/images/main0822.png" />
+      <img class="main-image" style="width: 70%; justify-content: center; background-color: white;" src="./assets/images/main0822-new.png" />
     </section>
   </div>
   <div>
@@ -83,7 +83,7 @@
         reminder of the danger historically inherent in American presidential politics. "</p> -->
     </section>
   </div>
-  <br><br>
+
   <div class="report">
     
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 900;font-style: normal;">LOS ANGELES -- </span> – Robert F. Kennedy Jr. warned the nation last week that “the Democratic Party has become the biggest threat to democracy in this country.”  Mr. Kennedy is the son of Senator and Attorney General Robert F. Kennedy and the nephew of President John F. Kennedy –two of the former Democratic Party’s most celebrated leaders.  Purged by <span>Neo</span>-Democrats from the party that his father lost his life building, Robert F. Kennedy Jr. is now an independent candidate for president.  But there is wide speculation that he will soon suspend his independent campaign and align with the forces of Elon Musk and President Trump in a more united effort to stop the rise of the <span>Neo-Democratic Party</span> in America.     </p>
