--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <br><br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;President Trump, Elon Musk, and Robert Kennedy Jr. are perhaps the three most powerful men in America today to insist that the <span>Neo-Democratic Party</span> is now an authoritarian party that achieves its objectives through media control and censorship, which Kennedy declared is “the first step onto the slippery slope to totalitarianism.”  </p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curiously, Marina Oswald was perhaps the first to realize that America underwent an enormous transformation when President Kennedy was assassinated –a transformation, which "will destroy this nation" she said in 1988, unless it learns the entire truth concerning the JFK assassination.  </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curiously, Marina Oswald was perhaps the first to realize that America underwent an enormous transformation when President Kennedy was assassinated. Failure to reveal those responsible for the death of President Kennedy, she said in 1988, "will destroy this nation."  </p>
 <br>
 <br>
 <br>
