--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Any observer familiar with the legendary rock band “The Who” and their hit album <span>Tommy</span> would say quite simply that “the crowd went crazy when <span>Kennedy</span> hit the stage.” The crowd cheered wildly and long when President Trump introduced Kennedy at the Arizona rally, and it raucously punctuated Kennedy’s address with applause and chants of “USA, USA and Bob-by, Bob-by.”  At least for these enthusiastic voters, Kennedy’s move marked the <span>real beginning</span> of his campaign against the Neo-Democratic Party–not the end.   </p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; President Trump also saluted President John F. Kennedy and Senator Robert F.  Kennedy -- two of the former Democratic Party’s most formidable architects.  President Kennedy was assassinated in Dallas, Texas on November 22, 1963, and Senator Kennedy was assassinated in Los Angeles, California on June 5, 1968, on the night that he won the California Democratic Presidential Primary. President Trump’s introduction of Kennedy and Kennedy’s address at the rally are here.   </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; President Trump also saluted President John F. Kennedy and Senator Robert F.  Kennedy -- two of the former Democratic Party’s most formidable architects.  President Kennedy was assassinated in Dallas, Texas on November 22, 1963, and Senator Kennedy was assassinated in Los Angeles, California on June 5, 1968, on the night that he won the California Democratic Presidential Primary. President Trump’s introduction of Kennedy and Kennedy’s address at the rally are <a href="https://youtu.be/BR3fuaKrEwU?si=Vhh041sVDyPghc5x" target="_blank">here</a>.   </p>
     <br>
     <br>
     <img class='pic' style="width: 60%;" src="./assets/images/pic1_0824.jpg" />
@@ -120,13 +120,52 @@
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kennedy finally gave his most explicit answer to Hannity’s question just last week in his August 15th warnings to the nation. He declared that the <span>Neo-Democratic Party</span> is simply no longer the <span>same</span> party that his father and President Kennedy helped to build.  Kennedy insisted that the “‘V.P. Harris Democratic Party’ would be <span>unrecognizable</span> to my father and uncle.” And he emphasized further that “the <span>Democratic Party</span> of RFK and JFK was the party of civil liberties and free speech.” But the <span>Neo-Democratic Party</span> (which he described as Harris’s party) “is the party of censorship, lockdowns, and medical coercion.  “Kennedy Democrats were anti-war,” but the <span>Neo-Democrats</span>, he added, are “riddled with ‘neocon’ (neo-conservative) warmongers."</p>
     <br>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;President Kennedy resisted intense pressure in 1961 from the CIA and the Defense
+      Department to invade Cuba, commit large scale combat troops to Vietnam, and
+      strike a belligerent stance with the Soviet Union. And Kennedy’s father was a
+      powerful force in opposition to the Vietnam War in 1968.</p>
+    <br>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Faithful to the <span>Kennedy</span> Democratic Party tradition, Robert F. Kennedy Jr.
+      and President Trump oppose the war in Ukraine. And Kennedy has accused the
+      Biden-Harris administration of blocking Ukrainian President Volodymyr
+      Zelensky’s efforts to achieve a peace agreement with Russian president Vladimir
+      Putin known as the Minsk Accords resulting in the unnecessary deaths of thousands
+      of young men and risk of world war.</p>
+    <br>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Trump-Kennedy plan to end the war in Ukraine is uncannily similar to
+      the plan successfully executed by President Kennedy in 1961 to deescalate the threat
+      of war with the Soviet Union after he rejected CIA and the Defense Department
+      militarism. That strategy consisted in negotiating from a position of strength and
+      refraining from committing unnecessarily belligerent acts against a potential enemy.
+      <a href="https://youtu.be/k6UF3xSBvFg?si=eUIxCF1NCLVLhCxT" style="font-style: italic;" target="_blank">JFK - A President Betrayed</a> is an illuminating and well-documented film, made by inspired filmmaker Cory Taylor, depicting JFK’s “never negotiate
+      out of fear, but never fear to negotiate” strategy.</p>
+    <br>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kennedy insisted yesterday that the Biden-Harris administration’s
+      interference with free elections in Ukraine and its efforts to bring NATO to the
+      Russian border were intentionally belligerent acts. These acts do not justify the
+      Russian invasion of Ukraine, Kennedy said, but they intentionally precipitated it.</p>
+    <br>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Neo-Democratic Party officials have now unilaterally appointed Harris to
+      replace Joseph Biden on the November ballot. Harris did not participate in the 2024
+      presidential primaries. Kennedy responded to the appointment by drawing another
+      contrast between classical Kennedy Democrats and the Neo-Democratic Party. He
+      declared that his father’s and uncle’s party was “the champion of voting rights and
+      fair elections.” But Harris’s party is the party of “disenfranchisement and
+      coronation of its candidates by corporate donors and party elites.”</p>
+    <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kennedy now joins Elon Musk in aligning with President Trump in an effort to stop the rise of the Neo-Democratic Party.  Musk announced on May 18, 2022 that he could “no longer support the Democratic Party.” He wrote that "in the past I voted Democrat because they were mostly the kindness party.  But they have become the party of division and hate, so I can no longer support them and will vote Republican.”  </p>
+    <br>
     <br>
     <img class='pic' src="./assets/images/pic4_0824.jpg" style="width: 80%;"/>
     <br><br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;President Trump, Elon Musk, and Robert Kennedy Jr. are perhaps the three most powerful men in America today to insist that the <span>Neo-Democratic Party</span> is now an authoritarian party that achieves its objectives through media control and censorship, which Kennedy declared is “the first step onto the slippery slope to totalitarianism.”  </p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curiously, Marina Oswald was perhaps the first to realize that America underwent an enormous transformation when President Kennedy was assassinated. Failure to expose those responsible for the death of President Kennedy, she said in 1988, "will destroy this nation."  </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curiously, Marina Oswald Porter, the wife in 1963 of the man the discredited
+      Warren Commission accused of killing President John F. Kennedy –Lee Harvey
+      Oswald-- is one of the first to realize that America underwent an enormous
+      transformation when President Kennedy was assassinated. Failure to expose those
+      actually responsible for the death of President Kennedy, she said in 1988, &quot;will
+      destroy this nation. Maybe you don’t believe me. But it’s a fact.&quot;</p>
 <br>
 <br>
 <br>
