--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <img class='pic' src="./assets/images/pic2_0824.jpg" style="width: 50%;"/>
     <br>
     <br>
-    <p class="reportText">“Back then, he said, “the Democrats were the champions of the Constitution, and civil rights. The Democrats stood against authoritarianism, against censorship, and against colonialism, imperialism, and unjust wars.”  But after a lifetime of devotion to the Democratic Party and intimate involvement in the party since early childhood, Kennedy left the party last October because “it had become the party of war, censorship, corruption.”  </p>
+    <p class="reportText">“Back then, he said, “the Democrats were the champions of the Constitution, and civil rights. The Democrats stood against authoritarianism, against censorship, and against colonialism, imperialism, and unjust wars.”  But after a lifetime of devotion to the Democratic Party and intimate involvement in the party since early childhood, Kennedy left the party last October because “it had become the party of war, censorship, and corruption.”  </p>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Prior to announcing his <span>independent</span> candidacy, Mr. Kennedy was challenging Joseph Biden for the Democratic Party nomination for president against intense opposition from the Democratic National Committee (DNC).  Mr. Kennedy’s declaration of independence from the DNC was driven in large part by the DNC’s determination to shield Biden from primary debates and potentially campaign-fatal losses in the early Iowa caucuses and the traditionally first-in-the nation New Hampshire presidential primary.  Biden received only 15.8 % of the in-person Iowa Democratic caucus vote in 2020 and merely 8.4 % of the vote in the 2020 New Hampshire Democratic presidential primary.  The DNC rescheduled the primaries to make South Carolina first (where Biden had defeated Senator Bernard Sanders in 2020).   </p>
     <br>
@@ -135,7 +135,7 @@
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Trump-Kennedy plan to end the war in Ukraine is uncannily similar to
       the plan successfully executed by President Kennedy in 1961 to deescalate the threat
       of war with the Soviet Union after he rejected CIA and the Defense Department
-      militarism. That strategy consisted in negotiating from a position of strength and
+      militarism. That strategy consisted in negotiating from a position of strength <span>and</span>
       refraining from committing unnecessarily belligerent acts against a potential enemy.
       <a href="https://youtu.be/k6UF3xSBvFg?si=eUIxCF1NCLVLhCxT" style="font-style: italic;" target="_blank">JFK - A President Betrayed</a> is an illuminating and well-documented film, made by inspired filmmaker Cory Taylor, depicting JFK’s “never negotiate
       out of fear, but never fear to negotiate” strategy.</p>
