--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
       transformation when President Kennedy was assassinated. Failure to expose those
       actually responsible for the death of President Kennedy, she said in 1988, &quot;will
       destroy this nation. Maybe you don’t believe me. But it’s a fact.&quot;</p>
+      <img class='pic' src="./assets/images/pic5_0824_new.jpg" style="width: 30%;"/>
 <br>
 <br>
 <br>
