--- a/index.html
+++ b/index.html
@@ -101,11 +101,7 @@
     <br>
     <p class="reportText">“Back then, he said, “the Democrats were the champions of the Constitution, and civil rights. The Democrats stood against authoritarianism, against censorship, and against colonialism, imperialism, and unjust wars.”  But after a lifetime of devotion to the Democratic Party and intimate involvement in the party since early childhood, Kennedy left the party last October because “it had become the party of war, censorship, and corruption.”  </p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Prior to announcing his <span>independent</span> candidacy, Mr. Kennedy was challenging Joseph Biden for the Democratic Party nomination for president against intense opposition from the Democratic National Committee (DNC).  Mr. Kennedy’s declaration of independence from the DNC was driven in large part by the DNC’s determination to shield Biden from primary debates and potentially campaign-fatal losses in the early Iowa caucuses and the traditionally first-in-the nation New Hampshire presidential primary.  Biden received only 15.8 % of the in-person Iowa Democratic caucus vote in 2020 and merely 8.4 % of the vote in the 2020 New Hampshire Democratic presidential primary.  The DNC rescheduled the primaries to make South Carolina first (where Biden had defeated Senator Bernard Sanders in 2020).   </p>
-    <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The DNC also gutted altogether the Iowa traditionally in-person caucuses and converted them into a mail-in ballot operation –ballots to be tallied in the middle of the primary season in order to avert likely Kennedy momentum after Iowa and New Hampshire victories.  The New Hampshire presidential primary had been first in the nation for over 100 years prior to Kennedy’s challenge to Biden.   </p>
-    <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The DNC also reserved a large block of <span>unelected</span> delegates loyal only to the DNC’s preferred candidate (Biden) –- <span>regardless</span> of primary election outcomes. </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Prior to announcing his <span>independent</span> candidacy, Mr. Kennedy was challenging Joseph Biden for the Democratic Party nomination for president against intense opposition from the Democratic National Committee (DNC).  </p>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ultimately, Kennedy faced many of the same subterranean political maneuvers that the DNC deployed with ubiquitous media cooperation against Senator Sanders when Sanders challenged another DNC favored candidate in the 2016 presidential primaries: former Secretary of State Hillary Clinton. The DNC never relented in its push to deny Sanders the Democratic nomination in 2016 despite the fact that the Vermont Senator consistently out-performed Clinton in public opinion polls against Donald Trump.   </p>
     <br>
@@ -145,14 +141,7 @@
       Russian border were intentionally belligerent acts. These acts do not justify the
       Russian invasion of Ukraine, Kennedy said, but they intentionally precipitated it.</p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Neo-Democratic Party officials have now unilaterally appointed Harris to
-      replace Joseph Biden on the November ballot. Harris did not participate in the 2024
-      presidential primaries. Kennedy responded to the appointment by drawing another
-      contrast between classical Kennedy Democrats and the Neo-Democratic Party. He
-      declared that his father’s and uncle’s party was “the champion of voting rights and
-      fair elections.” But Harris’s party is the party of “disenfranchisement and
-      coronation of its candidates by corporate donors and party elites.”</p>
-    <br>
+  
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kennedy now joins Elon Musk in aligning with President Trump in an effort to stop the rise of the Neo-Democratic Party.  Musk announced on May 18, 2022 that he could “no longer support the Democratic Party.” He wrote that "in the past I voted Democrat because they were mostly the kindness party.  But they have become the party of division and hate, so I can no longer support them and will vote Republican.”  </p>
     <br>
     <br>
