--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Robert F. Kennedy Jr. is the son of Senator Kennedy and the nephew of President Kennedy.  But purged by <span>Neo-Democrats</span> from the party that his father and uncle lost their lives building, Mr. Kennedy  issued a somber warning last week that “the Democratic Party has become the greatest threat to democracy in the country.” Kennedy declared that <span>Neo-Democrat</span> “elites don’t believe in democracy or trust the voters anymore.  They think that <span>they</span> are entitled to choose who you are <span>allowed</span> to vote for.  They think that <span>they</span> should be the judges of what is best for you and your family.”  Kennedy also warned in a separate statement on August 15 that <span>Neo-Democratic Party</span> officials no longer embrace his father’s or President Kennedy’s values.  Kennedy’s entire August 15 statement is <a href="https://x.com/robertkennedyjr/status/1824053188799889650?s=51" targe="_blank">here</a>.</p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mr. Kennedy’s warning of the demise of the former Democratic Party, the rise of an authoritarian <span>Neo-Democratic Party</span>, and his union with President Trump --the Republican nominee for president – has to be understood as a volcanic moment in the history of American politics.  Kennedy told reporters yesterday that he attended his first Democratic Convention when he was six years old. </p>
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mr. Kennedy’s warning of the demise of the former Democratic Party, the rise of an authoritarian <span>Neo-Democratic Party</span> in its place, and his union with President Trump --the Republican nominee for president – has to be understood as a volcanic moment in the history of American politics.  Kennedy told reporters yesterday that he attended his first Democratic Convention when he was six years old. </p>
     <br><br>
     <img class='pic' src="./assets/images/pic2_0824.jpg" style="width: 50%;"/>
     <br>
     <br>
-    <p class="reportText">“Back then, he said, “the Democrats were the champions of the Constitution, and civil rights. The Democrats stood against authoritarianism, against censorship, and against colonialism, imperialism, and unjust wars.”  But after a lifetime of devotion to the Democratic Party and intimate involvement in the party since early childhood, Kennedy left the party last October because “it had become the party of war, censorship, and corruption.”  </p>
+    <p class="reportText">“Back then, he said, “the Democrats were the champions of the Constitution and civil rights. The Democrats stood against authoritarianism, against censorship, and against colonialism, imperialism, and unjust wars.”  But after a lifetime of devotion to the Democratic Party and intimate involvement in the party since early childhood, Kennedy left the party last October because “it had become the party of war, censorship, and corruption.”  </p>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Prior to announcing his <span>independent</span> candidacy, Mr. Kennedy was challenging Joseph Biden for the Democratic Party nomination for president against intense opposition from the Democratic National Committee (DNC).  </p>
     <br>
@@ -118,7 +118,7 @@
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kennedy finally gave his most explicit answer to Hannity’s question just last week in his August 15th warnings to the nation. He declared that the <span>Neo-Democratic Party</span> is simply no longer the <span>same</span> party that his father and President Kennedy helped to build.  Kennedy insisted that the “‘V.P. Harris Democratic Party’ would be <span>unrecognizable</span> to my father and uncle.” And he emphasized further that “the <span>Democratic Party</span> of RFK and JFK was the party of civil liberties and free speech.” But the <span>Neo-Democratic Party</span> (which he described as Harris’s party) “is the party of censorship, lockdowns, and medical coercion.  “Kennedy Democrats were anti-war,” but the <span>Neo-Democrats</span>, he added, are “riddled with ‘neocon’ (neo-conservative) warmongers."</p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;President Kennedy resisted intense pressure in 1961 from the CIA and the Defense
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Taking anti-war steps that helped to define the traditional Democratic Party, President Kennedy resisted intense pressure in 1961 from the CIA and the Defense
       Department to invade Cuba, commit large scale combat troops to Vietnam, and
       strike a belligerent stance with the Soviet Union. And Kennedy’s father was a
       powerful force in opposition to the Vietnam War in 1968.</p>
@@ -136,7 +136,7 @@
       militarism. That strategy consisted in negotiating from a position of strength <span>and</span>
       refraining from committing unnecessarily belligerent acts against a potential enemy.
       <a href="https://youtu.be/k6UF3xSBvFg?si=eUIxCF1NCLVLhCxT" style="font-style: italic;" target="_blank">JFK - A President Betrayed</a> is an illuminating and well-documented film, made by inspired filmmaker Cory Taylor, depicting JFK’s “never negotiate
-      out of fear, but never fear to negotiate” strategy.</p>
+      out of fear, but never fear to negotiate” strategy.  &nbsp;Accordingly, the Trump-Kennedy opposition to the Ukrainian war ironically brings the comtemporary Republican Party closer to traditional Democratic Party values than the <span>Neo-Democrat Party</span> can now claim in light of its strong support for escalation of the Ukrainian war.</p>
     <br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kennedy insisted yesterday that the Biden-Harris administration’s
       interference with free elections in Ukraine and its efforts to bring NATO to the
@@ -151,12 +151,12 @@
     <br><br>
     <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;President Trump, Elon Musk, and Robert Kennedy Jr. are perhaps the three most powerful men in America today to insist that the <span>Neo-Democratic Party</span> is now an authoritarian party that achieves its objectives through media control and censorship, which Kennedy declared is “the first step onto the slippery slope to totalitarianism.”  </p>
     <br>
-    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curiously, Marina Oswald Porter, the wife in 1963 of the man the discredited
+    <p class="reportText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curiously, Marina Oswald Porter, the wife in 1963 of the man whom the discredited
       Warren Commission accused of killing President John F. Kennedy –Lee Harvey
-      Oswald-- is one of the first to realize that America underwent an enormous
+      Oswald-- is one of the first to realize that not only the Democratic Party, but America itself, began an enormous
       transformation when President Kennedy was assassinated. Failure to expose those
       actually responsible for the death of President Kennedy, she said in 1988, &quot;will
-      destroy this nation. Maybe you don’t believe me. But it’s a fact.&quot;</p>
+      destroy this nation. Maybe you don’t believe me. But it’s a fact.&quot; President Trump's promise to Robert Kennedy Jr. to release all remaining CIA documents concerning President Kennedy's assassination represents perhaps the clearest recognition of the validity of Mrs Oswald's claim ever expressed by a major public figure. </p>
       <img class='pic' src="./assets/images/pic5_0824_new.jpg" style="width: 30%;"/>
 <br>
 <br>
