--- a/archive20240721.html
+++ b/archive20240721.html
@@ -13,7 +13,7 @@
   <section class="hero">
     <div class="hero-text">
       <p>News and Analysis</p>
-      <p id="date">July 21, 2024</p>
+      <p>July 21, 2024</p>
     </div>
     <div class="hero-images">
       <img class="hero-title" src="./assets/images/my-title.jpg">
