--- a/archive20240714.html
+++ b/archive20240714.html
@@ -12,7 +12,7 @@
   <section class="hero">
     <div class="hero-text" >
       <p>News and Analysis</p>
-      <p id="date">July 14, 2024</p>
+      <p>July 14, 2024</p>
     </div>
     <div class="hero-images" >
       <img class="hero-title" src="./assets/images/my-title.jpg">
